--- a/finalproject.html
+++ b/finalproject.html
@@ -43,6 +43,7 @@
 
                       var world = loadData[0]
                       var data = loadData[1]
+                      var format = d3.format(".0%")
                       var countries = topojson.feature(world, world.objects.ne_110m_admin_0_countries);
                       var colorScale = d3.scaleSequential(d3.interpolatePlasma).domain([0, 1]);
                       var internetUsers = d3.nest().key(function(d){return d.country}).map(data);                                  //4
@@ -58,14 +59,49 @@
                       (b[1][1] + b[0][1])) / 2+50];
                           projection.scale(s).translate(t);
 
+                      var chartmargin = {top: 10, right: 30, bottom: 30, left: 30},
+                          chartwidth = 400 - chartmargin.left - chartmargin.right,
+                          chartheight = 300 - chartmargin.top - chartmargin.bottom;
+                      var chart = d3.select("#info2")
+                          .append("svg")
+                          .attr("width", chartwidth + chartmargin.left + chartmargin.right)
+                          .attr("height", chartheight + chartmargin.top + chartmargin.bottom)
+                          .append("g").attr('class', 'line')
+                          .attr("transform","translate(" + chartmargin.left + "," + chartmargin.top + ")");
+                      var x = d3.scaleLinear()
+                          .domain([2000, 2020])         // This is what is written on the Axis: from 0 to 100
+                          .range([0, chartwidth]);
+                      chart.append("g")
+                          .attr("transform", "translate(0," + chartheight + ")")
+                          .call(d3.axisBottom(x).ticks(6));
+
+                      var hover = function(d) {
+                          var div = document.getElementById('info1');
+                          d3.select(this).style('stroke', 'lightSteelBlue').style('stroke-width', 5)
+                          .style('stroke-dasharray', ('3 3'))
+                          div.innerHTML = d.properties.admin+ "<br/>" +" Total % of Internet Users by 2020: " +format(internetUsersbyCountry.get(d.properties.admin))
+                          var divChart = document.getElementById('info2')
+                          chart.datum(db.get(d.properties.users2020)).call(sparkline.draw);
+                      };
+
+                      var out = function(d) {
+                        var div = document.getElementById('info1')
+                        d3.select(this).transition().duration(500)
+                        .style('stroke', function(d){return 'transparent'})
+                        var divChart = document.getElementById('info2')
+                        chart.select('svg').remove();
+                      }
+
                       svg.selectAll("path")
                       .data(countries.features)
                       .enter()
                       .append("path")
                       .attr("d", path)
                       .attr("class", "country")
-                      .style("fill", function (d) {return colorScale(internetUsersbyCountry.get(d.properties.admin));});
-
+                      .style("fill", function (d) {return colorScale(internetUsersbyCountry.get(d.properties.admin));})
+                      .style('stroke', '#ccc')
+                      .on('mouseover', hover)
+                      .on('mouseout', out);
                          });
 </script>
 </body>
