--- a/finalproject.html
+++ b/finalproject.html
@@ -19,6 +19,7 @@
   <div id="info2">
   </div>
   <div id="extra1">
+    Smart Dashboard showing percentage of population with internet access by country, as well as broadband and mobile internet speed. By Ethan Liu and AZ Delacuesta.
   </div>
   <div id="extra2">
   </div>
@@ -30,6 +31,9 @@
         var projection = d3.geoEquirectangular()
         var countries = void 0;
 
+        var tipWidth = 200;
+        var tipHeight = 200;
+
     var path = d3.geoPath().projection(projection);
     var svg = d3.select("#map")
             .append("svg")
@@ -38,7 +42,7 @@
 
 
 
-            Promise.all([d3.json('data/world-110.json'), d3.csv('data/internetUsers.csv' )])
+            Promise.all([d3.json('data/world-110.json'), d3.csv('data/internetUsers.csv' ),])
 
                     .then(function ready(loadData) {
 
@@ -51,6 +55,8 @@
                       var internetUsersSorted = data.slice().sort(function(a,b){return d3.descending(+a.users2020, +b.users2020);})   //5
                       var countryList = internetUsersSorted.map(d => d.country);                                                     //6
                       var internetUsersbyCountry = new Map(data.map(d => [d.country, +d.users2020]));
+                      var internetSpeedbyCountry = new Map(data.map(d => [d.country, +d.broadband]));
+                      var mobileSpeedbyCountry = new Map(data.map(d => [d.country, +d.mobile]));
                       var db = d3.map();
 
                       projection.scale(1).translate([0, 0]);
@@ -61,10 +67,10 @@
                       (b[1][1] + b[0][1])) / 2+50];
                           projection.scale(s).translate(t);
 
+                          function buildBar(d) {
+              //    draw a chart
 
-            var sparkline = d3.charts.sparkline()
-                     .height(260)
-                     .width(310);
+               }
 
                       var chartmargin = {top: 10, right: 30, bottom: 30, left: 30},
                           chartwidth = 700 - chartmargin.left - chartmargin.right,
@@ -89,23 +95,32 @@
                           .call(d3.axisLeft(y));
 
                       var hover = function(d) {
+                        var barChart = d3.select("#info1").append("svg")
+                                        .attr('width', tipWidth).attr('height', tipHeight);
                         var selected = d.properties.admin;
                         console.log(selected);
                           var div = document.getElementById('info1');
                           d3.select(this).style('stroke', 'lightSteelBlue').style('stroke-width', 5)
-                          .style('stroke-dasharray', ('3 3'))
+                          .style('stroke-dasharray', ('3 3')).call(buildBar);
                           div.innerHTML = d.properties.admin+ "<br/>" +" Total % of Internet Users by 2020: " +format(internetUsersbyCountry.get(d.properties.admin))
                           var divChart = document.getElementById('extra2')
                           chart.append("path")
                             .datum(data)
                             .attr("fill", "none")
-                            .attr("stroke", "steelblue")
-                            .attr("stroke-width", 1.5)
+                            .attr("stroke", "limeGreen")
+                            .attr("stroke-width", 3)
                             .attr("transform", "translate(0, 0)")
                             .attr("d", d3.line()
-                              .x(function(d) { if (selected = d.country) {return x(d.Year) }})
-                              .y(function(d) { if (selected = d.country) {return y(d.users1) }})
+                            .x(function(d) { return x(d.graphx) })
+                            .y(function(d) { return y(d.graphy) })
                             );
+                            var div2 = document.getElementById('info2')
+                            div2.innerHTML = "Broadband Internet Speed: " +internetSpeedbyCountry.get(d.properties.admin) + " mbps" + "<br/><br/>" + "Mobile Internet Speed: " +mobileSpeedbyCountry.get(d.properties.admin) +" mbps"
+
+                            var xScale = d3.scaleLinear().domain([0, 1]).range([0, tipWidth]);
+                            yScale = d3.scaleBand().domain(countryList).rangeRound([0, tipHeight]);
+
+
                       };
 
                       var out = function(d) {
